name:                flavours-mvar
version:             1.0
synopsis:            Exploring Neil Mitchell's MVar examples
description:         Code to explore MVar examples at http://neilmitchell.blogspot.com/2012/06/flavours-of-mvar_04.html
license:             BSD3
license-file:        LICENSE
author:              Dino Morelli
maintainer:          dino@ui3.info
-- copyright:           
category:            Experimentation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable flavours-mvar
  main-is:             main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , time
  hs-source-dirs:      src
  default-language:    Haskell2010
